# sglang-inference-fabric

./: .env.example  README.md  docker-compose.yml  pyproject.toml
configs/: project.json
data/: README.md
docs/: architecture.md  evaluation.md  operator_handoff_checklist.md  runbook.md
outreach/: email_to_authors.md
research/: improvement_plan.md  innovation_memo.md  sources.md  upstream_audit.md  upstream_snapshot.json
social/: linkedin_post.md  publish_checklist.md
src/app/web/: index.html  styles.css
