
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-inference-fabric"
version = "0.1.0"
description = "Turn structured language model programs into an inference fabric with routing, caching, and throughput-aware ops controls."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
